--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <application>
+        <activity
+            android:name="com.productapp.presentation.compose.ListLazyColumn"
+            android:exported="false"
+            android:theme="@style/Theme.ProductApp" />
+    </application>
+
 </manifest>
