--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -6,12 +6,11 @@ plugins {
 }
 
 android {
-    namespace 'com.product.sideapp.domain'
-    compileSdk 33
+    compileSdk = libs.versions.compileSdk.get().toInteger()
 
     defaultConfig {
-        minSdk 24
-        targetSdk 33
+        minSdkVersion libs.versions.minSdk.get().toInteger()
+        targetSdkVersion libs.versions.compileSdk.get().toInteger()
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -30,24 +29,19 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-
+    namespace 'com.product.sideapp.domain'
 }
 
 dependencies {
-    def hilt_version = "2.47"
-
-    implementation("com.google.dagger:hilt-android:$hilt_version")
-    kapt("com.google.dagger:hilt-android-compiler:$hilt_version")
-
     implementation project(path: ':common')
 
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3'
+    implementation libs.hilt.core
+    kapt libs.hilt.compiler
+    implementation libs.android.core
+    implementation libs.appcompat
+    testImplementation libs.junit.core
+    androidTestImplementation libs.junit.test
+    androidTestImplementation libs.espresso.core
+    testImplementation libs.coroutines.test
 
 }
