--- a/common/build.gradle
+++ b/common/build.gradle
@@ -33,15 +33,8 @@ android {
 }
 
 dependencies {
-    def hilt_version = "2.47"
-
-    implementation("com.google.dagger:hilt-android:$hilt_version")
-    kapt("com.google.dagger:hilt-android-compiler:$hilt_version")
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.2'
+    implementation libs.hilt.core
+    kapt libs.hilt.compiler
+    implementation libs.android.core
+    implementation libs.appcompat
 }
