Add Data dependencies on Domain Module, change Common Model name to Domain Model

--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -34,6 +34,7 @@ android {
 
 dependencies {
     implementation project(path: ':common')
+    implementation project(path: ':data')
 
     implementation libs.hilt.core
     kapt libs.hilt.compiler
