--- a/data/build.gradle
+++ b/data/build.gradle
@@ -34,6 +34,7 @@ android {
 
 dependencies {
     implementation project(path: ':common')
+    implementation project(path: ':domain')
 
     implementation libs.okhttp.logging.interceptor
     implementation libs.hilt.core
