Add Centralize Dependencies( With Version Catalogs ) on app gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ plugins {
 
 android {
     namespace 'com.example.productapp'
-    compileSdk 33
+    compileSdk = libs.versions.compileSdk.get().toInteger()
 
     defaultConfig {
         applicationId "com.example.productapp"
-        minSdk 24
-        targetSdk 33
+        minSdkVersion libs.versions.minSdk.get().toInteger()
+        targetSdkVersion libs.versions.compileSdk.get().toInteger()
         versionCode 1
         versionName "1.0"
 
@@ -46,16 +46,12 @@ dependencies {
     implementation project(path: ':domain')
     implementation project(path: ':common')
 
-    def hilt_version = "2.47"
+    implementation libs.hilt.core
+    kapt libs.hilt.compiler
 
-    implementation("com.google.dagger:hilt-android:$hilt_version")
-    kapt("com.google.dagger:hilt-android-compiler:$hilt_version")
-
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation libs.android.core
+    testImplementation libs.junit.core
+    androidTestImplementation libs.junit.test
+    androidTestImplementation libs.espresso.core
+    implementation libs.compose.ui.material
 }
