--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,4 +25,7 @@ jobs:
         run: ./gradlew test
 
       - name: Upload a Build Artifact
-    uses: actions/upload-artifact@v3.1.3
+        uses: actions/upload-artifact@v3.1.3
+        with:
+          name: ProductApp.apk
+          path: app/build/outputs/apk/app-debug.apk
