Disable hilt Instantiable

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -11,10 +11,12 @@ android {
 
     defaultConfig {
         minSdk 24
-        targetSdk 33
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+    }
+
+    lintOptions {
+        disable "Instantiatable"
     }
 
     buildTypes {
