--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -16,6 +16,10 @@ android {
         consumerProguardFiles "consumer-rules.pro"
     }
 
+    lintOptions {
+        disable "Instantiatable"
+    }
+
     buildTypes {
         release {
             minifyEnabled false
