--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -19,6 +19,10 @@ android {
         }
     }
 
+    lintOptions {
+        disable "Instantiatable"
+    }
+
     buildTypes {
         release {
             minifyEnabled false
