Create lint error xml

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,12 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+
     lintOptions {
         disable "Instantiatable"
+        checkReleaseBuilds false
+        abortOnError false
+        lintConfig = file("$rootDir/lint.xml")
     }
 
     buildTypes {
