--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,8 @@
 [versions]
 # @keep
 compileSdk = "33"
+lintApi = "31.2.0"
+lintChecks = "31.3.0-alpha18"
 minSdk = "24"
 targetSdk = "33"
 androidCore = "1.10.1"
@@ -38,6 +40,8 @@ fragmenKtx = "1.5.7"
 [libraries]
 appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
 android-core = { module = "androidx.core:core-ktx", version.ref = "androidCore" }
+lint-api = { module = "com.android.tools.lint:lint-api", version.ref = "lintApi" }
+lint-checks = { module = "com.android.tools.lint:lint-checks", version.ref = "lintChecks" }
 material = { module = "com.google.android.material:material", version.ref = "material" }
 junit-core = { module = "junit:junit", version.ref = "junitCore" }
 junit-test = { module = "androidx.test.ext:junit", version.ref = "junitTest" }
