--- a/lint/build.gradle
+++ b/lint/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    alias(libs.plugins.com.android.library)
-    alias(libs.plugins.org.jetbrains.kotlin.android)
+    id 'com.android.library'
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
@@ -31,9 +31,8 @@ android {
 
 dependencies {
 
-    implementation 'com.android.tools.lint:lint-api:30.0.1'
-    implementation 'com.android.tools.lint:lint-checks:31.0.0-alpha05'
-
+    implementation libs.lint.api
+    implementation libs.lint.checks
 
     implementation libs.android.core
     implementation libs.appcompat
