Add output html

--- a/lint/build.gradle
+++ b/lint/build.gradle
@@ -29,7 +29,7 @@ android {
     }
     lint {
         htmlReport = true
-        htmlOutput = file("lint-report.html")
+       //htmlOutput = file("lint-report.html")
         textReport = true
         absolutePaths = false
         ignoreTestSources = true
