Revert mockk version for Jvm Subclass Instrumentation

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -48,5 +48,6 @@ dependencies {
     testImplementation(libs.mockk.android)
     testImplementation(libs.mockk.core)
     testImplementation libs.junit.core
+    testImplementation(libs.coroutines.test)
     androidTestImplementation libs.junit.test
 }
