--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         tools:targetApi="31">
         <activity
             android:name="com.productapp.presentation.MainActivity"
+            tools:ignore="Instantiatable"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
